--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 @charset "utf-8";
+img {
+    border-radius: 10%;
+    max-width: 150px;
+    max-height: 150px;
+    width: auto;
+    height: auto;
+}
 
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
